# lumis

./: .gitignore  AGENT.md  FEATURES.md  README.md  build.gradle  build.sh  build_rust.sh  check_rust.sh  context.txt  deploy.sh  revert.sh  settings.gradle  ssh.sh  status.md  sync.sh  test.rs
app/: AndroidManifest.xml  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lumis/camera/: CameraInterface.kt  LumisCallService.kt  PermissionsRequest.kt  SaveDng.kt  UserInterface.kt
app/src/main/res/values/: strings.xml  styles.xml
calibration samples/Verichrome/: target.dng.pp3
docs/: google-bug-tele-maxres-fov.md
rust/: Cargo.toml  build.rs  fix-ld-wrapper.sh
rust/assets/: duck.raw
rust/cal_harness/: .gitignore  Cargo.toml
rust/cal_harness/src/: main.rs
rust/quad_harness/: Cargo.toml
rust/quad_harness/src/: main.rs
rust/src/: jni_camera.rs  jni_menu.rs  jni_ui.rs  lib.rs  sensor_interface.rs  shared_memory.rs  ui_main_menu.rs
rust/src/debayer/: amaze.rs  mod.rs  quad.rs  rcd notes.txt  rcd.rs  region.rs
rust/src/image/: calibration.rs  dng.rs  icc.rs  integrator.rs  mod.rs  raw.rs  save_encode.rs  thumbnail.rs  tiff.rs
rust/src/ui/: arrows.rs  buttons.rs  controls.rs  histogram.rs  mod.rs  proto.rs  screen.rs  sliders.rs  text.rs  touch.rs  ui.rs
