[package]
name = "lumis_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lumis_core"
crate-type = ["cdylib"]

[features]
default = ["jni"]
jni = ["dep:jni", "dep:android_logger"]

[dependencies]
log = "0.4"
libc = "0.2.174"
ndk-sys = "0.6.0"
jni = { version = "0.21", optional = true }
android_logger = { version = "0.15.1", optional = true }
chrono = "0.4.41"
png = "0.17.16"
cosmic-text = "0.14.2"
arc-swap = "1.7.1"
rand = "0.9.2"
colored = "2.0"
image = "0.24"
reed-solomon = "0.2.1"
num-complex = "0.4"
num-traits = "0.2"
nalgebra = "0.33"
rayon = "1.8"
rustfft = "6.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# The colour-calibration engine. Depend on the real crate (default-features = false so the
# desktop eframe/egui GUI is NOT pulled into the Android build).
chameleon = { path = "../../chameleon", default-features = false }
tiff = "0.7.2"
async-trait = "0.1.53"
blake3 = "1.3.1"
binary_macros = "1.0.0"
bitvec = "1.0.1"
byteorder = "1.4.3"
imageproc = "0.23.0"
kamadak-exif = "0.5.4"
ndarray = "0.15.4"
ndarray-stats = "0.5.0"
# rand = "0.7.3" #don't update
rawloader = "0.37.1"
serde_json = "1.0"
thiserror = "1.0"
viuer = "0.6.2"
rm_rf = "0.6.2"
anyhow = "1.0.66"
dirs = "4.0.0"
fontdue = "0.7.2"
indicatif = "0.17.2"
term_size = "0.3.2"
zune-jpegxl = { path = "../../zune-jpegxl-lumis" } # Lumis fork: adds set_rec2020() colour signalling
zune-core = "0.5"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
#winreg = "0.10.1"
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
[dependencies.ed25519-dalek]
version = "1"
[profile.dev]
overflow-checks = false


[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9.0", features = ["api-level-26"] }
ndk-context = "0.1.1"

[profile.release]
opt-level = 3
debug = 1
# Wrapping arithmetic in ALL profiles so debug behaves exactly like production (and runs
# faster). Where saturation is actually needed, do it explicitly with .saturating_*().
overflow-checks = false
